# Bank-Account-Management-System

./: .gitignore  Account.txt  Bank Account Management System.c  Bank-Account_Management-System.CPP  CMakeLists.txt  INSTRUCTIONS.txt  LICENSE  Makefile  Makefile.txt  README.md  docfile.docx  gitignore
InputOutputExamples/: example_input.txt  example_output.txt
